--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   text-align: center;
   margin: 40px 0;
   font-weight: bold;
@@ -8,4 +10,173 @@ h1, h2, h3 {
 
 .question--title {
   font-size: 20px;
+}
+
+.red_box {
+  width: 400px;
+  height: 400px;
+  background-color: #ff0000;
+  margin: 0 auto;
+}
+
+@media screen and (max-width:960px) {
+  .red_box {
+    width: 200px;
+    height: 200px;
+  }
+}
+
+.box {
+  width: 300px;
+  height: 300px;
+}
+
+.color_box {
+  margin: 0 auto;
+  background: #ff0000;
+}
+
+@media screen and (max-width:960px) {
+  .color_box {
+    background: #007bff;
+  }
+}
+
+.center_box {
+  display: flex;
+  justify-content: center;
+}
+
+.blue_box {
+  background: #0008ff;
+  margin-right: 150px;
+}
+
+.green_box {
+  background: #22ff00;
+}
+
+@media screen and (max-width:960px) {
+  .blue_box {
+    margin-right: 50px;
+  }
+}
+
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.center {
+  overflow: auto;
+  width: fit-content;
+  margin: 0 auto;
+}
+
+.color_red {
+  background-color: #ff0000;
+}
+
+.color_blue {
+  background-color: #0008ff;
+}
+
+.float {
+  float: left;
+}
+
+@media screen and (max-width:960px) {
+  .float {
+    float: none;
+  }
+
+  .center {
+    margin: 0;
+  }
+}
+
+.flex_box {
+  display: flex;
+  justify-content: center;
+}
+
+.color_orange {
+  background-color: #ff8400;
+}
+
+.flex_item {
+  text-align: center;
+}
+
+.flex_box p {
+  line-height: 300px;
+}
+
+@media screen and (max-width:960px) {
+  .flex_box {
+    flex-direction: row-reverse;
+  }
+}
+
+.flex_order {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.color_green {
+  background-color: #00ff51;
+}
+
+.color_ligreen {
+  background-color: #d5ff00;
+}
+
+.color_purple {
+  background-color: #ff00e1;
+}
+
+.flex_order p {
+  line-height: 300px;
+}
+
+@media screen and (max-width:960px) {
+  .item1 {
+    order: 2;
+  }
+
+  .item2 {
+    order: 3;
+  }
+}
+
+.display_box {
+  display: flex;
+  justify-content: center;
+}
+
+.red {
+  background-color: #ff0000;
+  position: relative;
+  z-index: 10;
+}
+
+.blue {
+  background-color: #0008ff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 20;
+}
+
+.green {
+  background-color: #00ff51;
+}
+
+@media screen and (min-width:960px) {
+  .blue {
+    background-color: #0008ff;
+    display: none;
+  }
 }
